update spanish localization

--- a/ios/beartracks/beartracks-scout/Localizable.xcstrings
+++ b/ios/beartracks/beartracks-scout/Localizable.xcstrings
@@ -414,7 +414,7 @@
         "es-419" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Observación del partido"
+            "value" : "Observación"
           }
         }
       }
